css/style.css
/* Fonts */

@import url('https://fonts.googleapis.com/css?family=Abel|Anton|Roboto|Fjalla+One&display=swap');

.font-anton{
    font-family: 'Anton';
}
.font-abel{
    font-family: 'Abel'
}
.font-roboto{
    font-family: 'Roboto';
}
.font-fjallaone{
    font-family: 'Fjalla One';
}

/* General settings */

html, body{
    margin: 0;
    padding: 0;
}
body{
    max-width: 1920px;
}
body:after{  /* It prevents "blinking effect" on first hover */
    display: none;
    content: url(/images/multisport-orange.png), url(/images/oksystem-orange.png), url(/images/benefitsystem-orange.png);
   }
.row{
    margin: 0;
}
.py-section{
    padding: 100px 0px 50px 0px;
}
.py-section-100{
    padding: 100px 0px 100px 0px;
}
.btn:focus {
    box-shadow: none;
}
td.bg-orangered:hover, a.bg-orangered:hover, button.bg-orangered:hover{
    background-color: rgb(207, 73, 43);
}
.modal-backdrop{
    overflow-y: scroll;
}
a:hover{
    text-decoration: none;
}
/* Custom backgrounds */

.bg-darkness{
    background-color: rgb(19, 19, 19);
}
.bg-orangered{
    background-color: #ff5733;
}
.bg-transparentWhite{
    background-color: rgba(255, 255, 255, 0.5);
}
.bg-creamy{
    background-color: #ebebeb;
}
.bg-silver{
    background-color: #b8b8b8;
}
.bg-gray{
    background-color: #343239;
}
.bg-transparent{
    background-color: transparent;
}

/* Custom classes backgrounds */

.bg-zumba{
    background-color: #ff5733;
}
.bg-zumba:hover{
    background-color: hsl(11, 100%, 55%);
}
.bg-boxingFitness{
    background-color: greenyellow;
}
.bg-boxingFitness:hover{
    background-color: #adff2f;
}
.bg-jumpingFitness{
    background-color: darkolivegreen;
}
.bg-jumpingFitness:hover{
    background-color: rgb(66, 83, 36);
}
.bg-hotpink{
    background-color: hotpink;
}
.bg-hotpink:hover{
    background-color: rgb(224, 93, 159);
}
.bg-fitFamily{
    background-color: cyan;
}
.bg-fitFamily:hover{
    background-color: rgb(5, 223, 223);
}
.bg-powerPump{
    background-color: cornflowerblue;
}
.bg-powerPump:hover{
    background-color: rgb(81, 122, 199);
}
.bg-abt{
    background-color: burlywood;
}
.bg-abt:hover{
    background-color: rgb(190, 159, 119);
}
.bg-mediumpurple{
    background-color: mediumpurple;
}
.bg-mediumpurple:hover{
    background-color: rgb(118, 91, 173);
}
.bg-powerBike{
    background-color: palegreen;
}
.bg-powerBike:hover{
    background-color: rgb(121, 196, 121);
}
.bg-crossTraining{
    background-color: wheat;
}
.bg-crossTraining:hover{
    background-color: rgb(214, 195, 159);
}
.bg-yoga{
    background-color: dodgerblue;
}
.bg-yoga:hover{
    background-color: rgb(24, 115, 207);
}
.bg-healthySpine{
    background-color: forestgreen;
}
.bg-healthySpine:hover{
    background-color: rgb(28, 114, 28);
}
.bg-pilates{
    background-color: crimson;
}
.bg-pilates:hover{
    background-color: rgb(182, 18, 51);
}
.bg-absBlast{
    background-color: mediumturquoise;
}
.bg-absBlast:hover{
    background-color: rgb(64, 189, 185);
}
.bg-tabata{
    background-color: gold;
}
.bg-tabata:hover{
    background-color: rgb(228, 195, 7);
}


/* Custom text colors */

.text-orangered{
    color: #d44221; 
}
.text-silver{
    color: #b8b8b8;
}

/* Custom effects */

.white-light{
    box-shadow: 5px 5px 100px 50px rgba(255, 255, 255, 0.788);
}

/* Navigation */

.royalGymLogo{
    width: 100px;
}
.nav-link{
    font-size: 1.3em;
    transition: all .3s;
}
.nav-link:hover{
    transform: translateY(-1px);
    transition: all .3s;
}
.navbar{
    margin-right: 0 !important;
}

/* Home */

#showcase{
background: rgb(0,0,0);
background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(215,215,215,1) 100%);
}
#showcaseGym{
    background-image: url('../images/bggym2.png');
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    max-height: 1080px;
}
#showcaseFitman{
    height: 60vh;
    min-height: 500px;
    background-image: url('../images/fitman.png');
    background-repeat: no-repeat;
    background-position-x: right;
    background-position-y: bottom;
    background-size: auto 100%;
    max-height: 1080px;
}
#sloganContainer{
    background-color: rgba(255, 255, 255, 0.8);
}
#icons{
    background-image: url('../images/groupworkout.png');
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
}
.customerImg{
    max-width: 150px;
}
#topQuote{
    top: -20px;
    left: 0px;
}
#bottomQuote{
    bottom: -20px;
    right: 0px;
}
.gymEquipmentImg{
    max-width: 250px;
}
.feedbackBtn{
    display: none;
}
.collapseComment:not(.show){
    display: block !important;
}

/* Classes */

table{
    background-color: black;
}
table td{
    vertical-align: middle !important;
    text-align: center;
    padding: 1em;
    border-right: 1px solid #343239;
    border-bottom: 1px solid #343239;
}
table thead td{
    position: sticky;
    top: 125px;
}
table tbody td:not(:first-child){
    font-size: 1.1em;
    transition: all .2s;
}
table tbody td:not(.nbsp):not(:first-child){
    cursor: pointer;
    transition: all .2s;
}
table{
    border-spacing: 0px;
    border-collapse: separate;
    box-shadow: 5px 5px 100px 50px rgba(255, 255, 255, 0.788);
}
table div{
    justify-content: center;
}
.empty{
    display: none;
}
.btnPreviousDay, .btnNextDay{
    display: none;
}
.classImg{
    max-width: 250px;
}
.classDescription{
    font-family: 'Abel';
    font-size: 1.2em;
}
/* #timetable{
    background-image: url('/images/classesbg.png');
    background-repeat: no-repeat;
    background-position: 0 0;
    background-attachment: fixed;
} */

/* Offers */

/* #offers{
    background-image: url('/images/bggym.png');
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
} */

/* Contact - google map */

.map-responsive{
    overflow:hidden;
    position:relative;
    height:100%;
    min-height: 500px;
    z-index: 2;
}
.map-responsive iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}
/* #contact{
    background-image: url('/images/ropes.jpg');
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
} */

/* Team */

/* #team{
    background-image: url('/images/bggym3.jpg');
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
} */

/* Gallery */

.gallery-link{
    cursor: pointer;
}
.btnPreviousImage, .btnNextImage{
    top: 50%;
    z-index: 2;
    transform: translateY(-50%);
}
.btnPreviousImage{
    left: 15px;
}
.btnNextImage{
    right: 15px;
}
.btnCloseImage{
    z-index: 3;
    right: 15px;
}

/* Footer */

footer{
    position: sticky;
}
.societyIcon{
    cursor: pointer;
    transition: all .3s;
    color: #fff;
}
.societyIcon:hover{
    transform: translateY(-2px);
    transition: all .3s;
    color: orangered;
}
.benefitImg{
    display: inline-block;
    transition: all .3s;
    background-size: contain;
    background-repeat: no-repeat;
}
.benefitImg:hover{
    transform: translateY(-2px);
    transition: all .3s;
}
#multisportImg{
    width: 160px;
    height: 36px;
    background-image: url('../images/multisport.png');
}
#multisportImg:hover{
    background-image: url('../images/multisport-orange.png');
}
#benefitSystemsImg{
    width: 160px;
    height: 39px;
    background-image: url('../images/benefitsystem.png')
}
#benefitSystemsImg:hover{
    background-image: url('../images/benefitsystem-orange.png');
}
#okSystemImg{
    width: 160px;
    height: 34px;
    background-image: url('../images/oksystem.png');
}
#okSystemImg:hover{
    background-image: url('../images/oksystem-orange.png');
}


/* Media queries */

@media only screen and (max-width: 1366px){
    #slogan p{
        font-size: 3.5em;
    }
    #slogan h2{
        font-size: 1.3em;
    }
}
@media only screen and (max-width: 1199px){
    #showcaseFitman{
        background-position-x: center;
    }
    #sloganContainer{
        margin: auto;
    }
    #slogan{
        text-align: center;
    }
    #slogan p{
        font-size: 3.2em;
    }
    #slogan h2{
        font-size: 1.5em;
    }
}
@media only screen and (min-width: 768px){
    table td:not(.empty){
        display: table-cell !important;
    }
    .card-container{
        max-width: 310px;
    }
    .trainer-container{
        max-width: 500px;
    }
}
@media only screen and (max-width: 767px){
    .sectionTitle{
        font-size: 2em;
    }
    .feedbackBtn{
        display: inline-block;
    }
    .collapse:not(.show){
        display: none !important; 
    }
    #smHours{
        display: none;
    }
    table td:not(:nth-child(1)):not([data-day="monday"]){
        display: none;
    }
    table td{
        padding-left: 5px;
        padding-right: 5px;
    }
    table td:first-child{
        width: 20%;
    }
    .btnPreviousDay, .btnNextDay{
        display: block;
    }
    table div{
        justify-content: space-between;
    }   
    table tbody td{
        height: 65px;
    }
    .contact-col{
        border-right: none !important;
    }
    .py-section{
        padding: 50px 0px 50px 0px;
    }
    .py-section-100{
        padding: 50px 0px 50px 0px;
    }
}
@media only screen and (max-width: 767px) and (orientation: landscape){
    .navbar-nav{
        display: block;
    }
    .nav-item{
        display: inline-block;
    }
}

